# uuid-generate

./: Cargo.toml  README.md
.github/workflows/: build.yml
