[package]
name = "uuid-generate"
version = "0.1.4"
authors = ["LesnyRumcajs <LesnyRumcajs@users.noreply.github.com>"]
edition = "2018"

license = "MIT"
repository = "https://github.com/LesnyRumcajs/uuid-generate"

description = "UUID generator"
keywords = ["uuid", "unique", "guid"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }
itertools = "0.9"

[[bin]]
name = "uuid-generate"
path = "src/bin/generator.rs"

